<resources>
    <string name="app_name">NippoHub</string>
    <string name="back">戻る</string>
    <string name="new_daily_report">新規作成</string>
    <string name="edit_daily_report">編集</string>
    <string name="daily_report_date">日付</string>
    <string name="daily_report_title">タイトル</string>
    <string name="daily_report_content">内容</string>
    <string name="create">作成</string>
    <string name="update">更新</string>
    <string name="setting">設定</string>
    <string name="user_email">メールアドレス</string>
    <string name="user_password">パスワード</string>
    <string name="user_password_confirmation">パスワードの確認</string>
    <string name="sign_in">サインイン</string>
    <string name="sign_up">サインアップ</string>
    <string name="to_sign_up">登録する</string>
    <string name="privacy">プライバシーポリシー</string>
    <string name="agreements">利用規約</string>
    <string name="sign_up_notion">サインアップすると利用規約とプライバシーポリシーに同意したことになります。</string>
    <string name="daily_report_title_sample">20xx-xx-xx 今日はいい日だった</string>
    <string name="daily_report_list_title">%s %s</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_auth_error">認証エラー</string>
    <string name="dialog_message_wrong_password">パスワードが違います。</string>
    <string name="dialog_message_not_same_password_with_confirmation">入力したパスワードが一致しません。</string>
    <string name="dialog_message_email_already_used">入力されたEmailはすでに登録されています。</string>
    <string name="share">共有する</string>
    <string name="stop_sharing">プライベートにする</string>
    <string-array name="settings">
        <item>利用規約</item>
        <item>プライバシーポリシー</item>
        <item>サインアウト</item>
    </string-array>
</resources>
